--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "quoted-printable": "^1.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "recharts": "^3.0.2",
     "tailwind-merge": "^3.3.1"
   },
